--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="a"> </p>
+    <div>
+        <span id="a"></span>
+        <span id="c"></span>
+    </div>
     <button id="b">click here!</button>
     <script src="script.js"></script>
 </body>
